--- a/demo_by_task/ks/ks.cfg
+++ b/demo_by_task/ks/ks.cfg
@@ -1,1 +1,18 @@
-
+lang en_US
+keyboard --xlayouts='us'
+timezone Australia/Brisbane --utc
+rootpw $2b$10$oQ9T.uRELN0IGTmzkpo1Bu.IPokDbjKCbX7HUfcRXX3DbOAUymC1K --iscrypted
+reboot
+text
+harddrive --partition=/dev/vda --dir=/ISOs
+bootloader --append="rhgb quiet crashkernel=1G-4G:192M,4G-64G:256M,64G-:512M"
+zerombr
+clearpart --all --initlabel
+autopart
+network --bootproto=dhcp
+firstboot --disable
+selinux --permissive
+firewall --enabled --ssh
+%packages
+@^graphical-server-environment
+%end
