--- a/demo_by_task/ks/ks.cfg
+++ b/demo_by_task/ks/ks.cfg
@@ -8,8 +8,8 @@ harddrive --partition=/dev/vda --dir=/ISOs
 bootloader --append="rhgb quiet crashkernel=1G-4G:192M,4G-64G:256M,64G-:512M"
 zerombr
 clearpart --all --initlabel
-autopart
-network --bootproto=dhcp
+autopart --type=lvm --disk=/dev/vda
+network --bootproto=dhcp hostname=changehostname --activate
 firstboot --disable
 selinux --permissive
 firewall --enabled --ssh
